# chatbot

./: .gitignore  README.md  app.py  pyproject.toml  rl_test.ipynb  test_chat.ipynb  test_llm.ipynb  train_script_3.py  train_script_v1.py
components/: model.py
old/: rl_test.ipynb  test_llm.ipynb  train_script_v2.py
